fixes on mobile and desktop view

--- a/src/app/shared/components/home-landing/home-landing.component.scss
+++ b/src/app/shared/components/home-landing/home-landing.component.scss
@@ -264,10 +264,6 @@ flex-wrap: wrap;
     padding: 0.5rem 1rem;
   }
   
-  .image-wrapper {
-
-  }
-  
   .image-three {
     bottom: -20%;
     left: 27%;
@@ -444,7 +440,7 @@ flex-wrap: wrap;
 
   .image-three {
     bottom: -60.6px;
-    left: 0.5rem;
+    left: 0rem;
     width: 5rem;
   }
   
