--- a/src/app/shared/components/join-waitlist/join-waitlist.component.css
+++ b/src/app/shared/components/join-waitlist/join-waitlist.component.css
@@ -11,6 +11,10 @@ body {
   margin: 0rem 1rem;
 }
 
+.uk-offcanvas-close {
+  display: none;
+}
+
 .waitList-heading {
   font-family: 'Avenir LT Std';
   font-style: normal;
@@ -35,8 +39,8 @@ body {
   margin-right: 0.25rem;
 }
 
-.group-wrapper {
-    /* margin: 1rem; */
+.waitList-radioBtn label input[type=radio]#black {
+  accent-color: black;
 }
 
 .group-wrapper label {
@@ -61,4 +65,90 @@ body {
 }
 .joinBtn a {
     color: #fff;
+}
+
+@media only screen and (min-width: 768px){
+.wrapper-container {
+  margin: 0.5rem 1.25rem;
+}
+
+.waitList-nav {
+  margin: 0rem 1rem;
+}
+
+.uk-offcanvas-close {
+  display: none;
+}
+
+.waitList-heading {
+  font-size: 1.1rem;
+  margin: 3rem 0rem 1.5rem 0rem;
+}
+
+
+.waitList-radioBtn {
+  margin-bottom: 1rem;
+}
+
+.waitList-radioBtn input {
+  margin-right: 0.25rem;
+}
+
+.group-wrapper input {
+    padding: 0.5rem 0.85rem;
+    margin: 0.25rem 0rem 2rem 0rem;
+}
+
+.joinBtn {
+    padding: 0.5rem 0.85rem;
+}
+}
+
+@media only screen and (min-width: 992px){
+  .wrapper-container {
+    margin: 2.5rem 20rem;
+  }
+  
+  .waitList-nav {
+    display: none;
+  }
+  
+  .uk-offcanvas-close {
+    display: block;
+    margin-right: 20rem;
+  }
+  
+  .waitList-heading {
+    font-size: 1.1rem;
+    margin: 3rem 0rem 1.5rem 0rem;
+  }
+  
+  
+  .waitList-radioBtn {
+    margin-bottom: 1rem;
+  }
+  
+  .waitList-radioBtn input {
+    margin-right: 0.25rem;
+  }
+  
+  .group-wrapper input {
+      padding: 0.5rem 0.85rem;
+      margin: 0.25rem 0rem 2rem 0rem;
+  }
+  
+  .joinBtn {
+      padding: 0.5rem 0.85rem;
+  }
+}
+
+@media only screen and (min-width: 1200px){
+  .wrapper-container {
+    margin: 2.5rem 30rem;
+  }
+  
+  .uk-offcanvas-close {
+    display: block;
+    margin-right: 30rem;
+  }
 }
