--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -21,7 +21,7 @@
   color: black;
 }
 .uk-offcanvas-bar {
-  background-color: #E5E5E5;
+  background-color: #fff;
   width: 100%;
 }
 
@@ -76,6 +76,7 @@ ul {
 }
 .mobile-side-menu li {
   padding: 0.4rem 0;
+  margin: 1.5rem 0rem;
 }
 .mobile-side-menu li a {
   font-family: 'Avenir LT Std';
