--- a/src/app/shared/components/success-modal/success-modal.component.css
+++ b/src/app/shared/components/success-modal/success-modal.component.css
@@ -24,3 +24,15 @@
 .join-btn a {
   color: #fff;
 }
+
+@media only screen and (min-width: 992px) {
+  .container-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+    margin-top: 15rem;
+    background-color: #fff !important;
+  }
+}
