--- a/src/theme.css
+++ b/src/theme.css
@@ -75,7 +75,7 @@
 .mat-typography {
   font: 400 14px/20px Roboto;
   letter-spacing: 0.0179em;
-  background-color: #fbf9f9;
+  background-color: #fff;
   height: auto;
 }
 .mat-body p,
